--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
     <div class="row">
-        <div class="col-6 offset-3">
+        <div class="col-6">
             <div class="card mb-2">
                 <img src="<%= campground.image %>" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -29,5 +29,41 @@
                     2 days ago
                 </div>
             </div>
+        </div>
+        <div class="col-6">
+            <h2>Leave a review</h2>
+            <form class="mb-3 needs-validation" action="/campgrounds/<%= campground._id%>/reviews" method="POST"
+                novalidate>
+                <div class="mb-3">
+                    <label class="form-label" for="rating">Rating</label>
+                    <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="review" required>
+                    <div class="invalid-feedback">
+                        Rating is required!
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="body">Review</label>
+                    <textarea class="form-control" name="review[body]" id="rating" cols="30" rows="3"
+                        required></textarea>
+                    <div class="invalid-feedback">
+                        Review is required!
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-success">Submit</button>
+            </form>
+            <% for(let review of campground.reviews){ %>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h5>Rating: <%= review.rating %>
+                        </h5>
+                        <p>Review: <%= review.body %>
+                        </p>
+                        <form action="/campgrounds/<%= campground._id%>/reviews/<%= review._id%>?_method=DELETE"
+                            method="POST">
+                            <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                        </form>
+                    </div>
+                </div>
+                <% } %>
         </div>
     </div>
