--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <button class="btn btn-success" type="submit">Update Campground</button>
+                    <button class="btn btn-success">Update Campground</button>
                 </div>
             </form>
             <a href="/campgrounds/<%= campground._id%>">Back to Campground</a>
