--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,7 +10,14 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
                 <a class="nav-link" href="/campgrounds">Campgrounds</a>
                 <a class="nav-link" href="/campgrounds/new">New Campground</a>
-                <a class="nav-link disabled">Disabled</a>
+            </div>
+            <div class="navbar-nav ms-auto">
+                <% if(!currentUser){ %>
+                    <a class="nav-link" href="/users/login">Login</a>
+                    <a class="nav-link" href="/users/register">Register</a>
+                    <% } else { %>
+                        <a class="nav-link" href="/users/logout">Logout</a>
+                        <% } %>
             </div>
         </div>
     </div>
