--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -16,54 +16,67 @@
                         <%= campground.location %>
                     </li>
                     <li class="list-group-item">
+                        Created by <%= campground.author.username %>
+                    </li>
+                    <li class="list-group-item">
                         $<%= campground.price %>
                     </li>
                 </ul>
-                <div class="card-body">
-                    <a href="/campgrounds/<%= campground._id%>/edit" class="card-link btn btn-info">Edit</a>
-                    <form class="d-inline" action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST">
-                        <button class="btn btn-danger" type="submit">Delete</button>
-                    </form>
-                </div>
-                <div class="card-footer text-muted">
-                    2 days ago
-                </div>
+                <% if(currentUser && campground.author.equals(currentUser._id)){ %>
+                    <div class="card-body">
+                        <a href="/campgrounds/<%= campground._id%>/edit" class="card-link btn btn-info">Edit</a>
+                        <form class="d-inline" action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST">
+                            <button class="btn btn-danger" type="submit">Delete</button>
+                        </form>
+                    </div>
+                    <% } %>
+                        <div class="card-footer text-muted">
+                            2 days ago
+                        </div>
             </div>
         </div>
         <div class="col-6">
-            <h2>Leave a review</h2>
-            <form class="mb-3 needs-validation" action="/campgrounds/<%= campground._id%>/reviews" method="POST"
-                novalidate>
-                <div class="mb-3">
-                    <label class="form-label" for="rating">Rating</label>
-                    <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="review" required>
-                    <div class="invalid-feedback">
-                        Rating is required!
+            <% if(currentUser){ %>
+                <h2>Leave a review</h2>
+                <form class="mb-3 needs-validation" action="/campgrounds/<%= campground._id%>/reviews" method="POST"
+                    novalidate>
+                    <div class="mb-3">
+                        <label class="form-label" for="rating">Rating</label>
+                        <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="review"
+                            required>
+                        <div class="invalid-feedback">
+                            Rating is required!
+                        </div>
                     </div>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="body">Review</label>
-                    <textarea class="form-control" name="review[body]" id="rating" cols="30" rows="3"
-                        required></textarea>
-                    <div class="invalid-feedback">
-                        Review is required!
+                    <div class="mb-3">
+                        <label class="form-label" for="body">Review</label>
+                        <textarea class="form-control" name="review[body]" id="rating" cols="30" rows="3"
+                            required></textarea>
+                        <div class="invalid-feedback">
+                            Review is required!
+                        </div>
                     </div>
-                </div>
-                <button type="submit" class="btn btn-success">Submit</button>
-            </form>
-            <% for(let review of campground.reviews){ %>
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h5>Rating: <%= review.rating %>
-                        </h5>
-                        <p>Review: <%= review.body %>
-                        </p>
-                        <form action="/campgrounds/<%= campground._id%>/reviews/<%= review._id%>?_method=DELETE"
-                            method="POST">
-                            <button type="submit" class="btn btn-sm btn-danger">Delete</button>
-                        </form>
-                    </div>
-                </div>
+                    <button type="submit" class="btn btn-success">Submit</button>
+                </form>
                 <% } %>
+                    <% for(let review of campground.reviews){ %>
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <h5>Rating: <%= review.rating %>
+                                </h5>
+                                <p class="card-subtitle">By <%= review.author.username %>
+                                </p>
+                                <p>Review: <%= review.body %>
+                                </p>
+                                <% if(currentUser && review.author.equals(currentUser._id)){ %>
+                                    <form
+                                        action="/campgrounds/<%= campground._id%>/reviews/<%= review._id%>?_method=DELETE"
+                                        method="POST">
+                                        <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                                    </form>
+                                    <% } %>
+                            </div>
+                        </div>
+                        <% } %>
         </div>
     </div>
